// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    {
      "className": "orion-fusion-theme",
    }
  }
>
  <_default>
    <section
      className="demographics-banner orion-fusion-theme"
    >
      <h2
        className="person-name"
      >
        <span />
      </h2>
      <dl
        className="person-details"
      >
        <DemographicsBannerValue
          key="age"
        >
          <div
            className="value"
          >
            <dt
              className="value-term"
            />
            <dd
              className="value-text"
            />
          </div>
        </DemographicsBannerValue>
        <DemographicsBannerValue
          key="gender"
        >
          <div
            className="value"
          >
            <dt
              className="value-term"
            />
            <dd
              className="value-text"
            />
          </div>
        </DemographicsBannerValue>
        <DemographicsBannerValue
          key="dob"
        >
          <div
            className="value"
          >
            <dt
              className="value-term"
            />
            <dd
              className="value-text"
            />
          </div>
        </DemographicsBannerValue>
      </dl>
      <div
        className="application-content"
      />
    </section>
  </_default>
</ThemeContextProvider>
`;

exports[`renders small banner that contains all valid information 1`] = `
<section
  applicationRows={
    [
      {
        "Address": "1501 Walnut St. Apt #123",
        "City": "Kansas City MO",
      },
      {
        "ZIP": 64108,
      },
    ]
  }
  className="demographics-banner"
>
  <h2
    className="person-name"
  >
    <span>
      Johnathon Doe
      <span
        className="preferred-first-name"
      >
        (John)
      </span>
    </span>
  </h2>
  <dl
    className="person-details"
  >
    <DemographicsBannerValue
      key="age"
      value="25 Years"
    />
    <DemographicsBannerValue
      key="gender"
      value="Male"
    />
    <DemographicsBannerValue
      key="dob"
      label="DOB"
      value="May 9, 1993"
    />
    <DemographicsBannerValue
      key="identifier-MRN"
      label="MRN"
      value={12343}
    />
    <DemographicsBannerValue
      key="identifier-REA"
      label="REA"
      value="3JSDA"
    />
  </dl>
  <div
    className="application-content"
  >
    <span
      className="risk-score"
    >
      5%
    </span>
  </div>
</section>
`;

exports[`renders the provided person name header level 1`] = `
<section
  className="demographics-banner"
>
  <h3
    className="person-name"
  >
    <span>
      Johnathon Doe
      <span
        className="preferred-first-name"
      >
        (John)
      </span>
    </span>
  </h3>
  <dl
    className="person-details"
  >
    <DemographicsBannerValue
      key="age"
    />
    <DemographicsBannerValue
      key="gender"
    />
    <DemographicsBannerValue
      key="dob"
    />
  </dl>
  <div
    className="application-content"
  />
</section>
`;
